--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erlang-js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Erlang idioms for javascript",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -59,7 +59,11 @@
     "typedoc": "^0.5.5",
     "typescript": "^2.2.0"
   },
-  "keywords": ["erlang", "elixir", "otp"],
+  "keywords": [
+    "erlang",
+    "elixir",
+    "otp"
+  ],
   "nyc": {
     "exclude": [
       "**/*.spec.js"
