--- a/package.json
+++ b/package.json
@@ -1,83 +1,28 @@
 {
-  "name": "erlang-js",
-  "version": "0.5.2",
-  "description": "Erlang idioms for javascript",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "repository": "https://github.com/aitoroses/erlang-js",
+  "name": "akkajs",
+  "version": "0.0.1",
+  "description": "Akka actors port to Javascript",
+  "main": "build/index.js",
+  "repository": "https://github.com/aitoroses/akkajs",
   "author": "Aitor Oses <aitor.oses@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "info": "npm-scripts-info",
-    "build": "trash build && tsc -p tsconfig.json && tsc -p config/tsconfig.module.json",
-    "lint": "tslint src/**/*.ts",
-    "unit": "yarn build && nyc ava",
-    "check-coverage": "nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "test": "yarn lint && yarn unit && yarn check-coverage",
-    "watch": "trash build && multiview [yarn watch:build] [yarn watch:unit]",
-    "watch:build": "tsc -p tsconfig.json -w",
-    "watch:unit": "tsc -p tsconfig.json && ava --watch --verbose",
-    "cov": "yarn unit && yarn html-coverage && opn coverage/index.html",
-    "html-coverage": "nyc report --reporter=html",
-    "send-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
-    "docs": "typedoc src/index.ts --excludePrivate --mode file --theme minimal --out build/docs && opn build/docs/index.html",
-    "docs:json": "typedoc --mode file --json build/docs/typedoc.json src/index.ts",
-    "release": "standard-version"
-  },
-  "scripts-info": {
-    "info": "Display information about the scripts",
-    "build": "(Trash and re)build the library",
-    "lint": "Lint all typescript source files",
-    "unit": "Run unit tests",
-    "test": "Lint and test the library",
-    "watch": "Watch source files, rebuild library on changes, rerun relevant tests",
-    "watch:build": "Watch source files, rebuild library on changes",
-    "watch:unit": "Watch the build, rerun relevant tests on changes",
-    "cov": "Run tests, generate the HTML coverage report, and open it in a browser",
-    "html-coverage": "Output HTML test coverage report",
-    "send-coverage": "Output lcov test coverage report and send it to codecov",
-    "docs": "Generate API documentation and open it in a browser",
-    "docs:json": "Generate API documentation in typedoc JSON format",
-    "release": "Bump package.json version, update CHANGELOG.md, tag a release"
-  },
-  "engines": {
-    "node": ">=4"
+    "build": "tsc",
+    "build:watch": "tsc -w",
+    "lint": "tslint --fix src/**/*.ts",
+    "test": "tsc && ava build/**/*.spec.js",
+    "test:watch": "ava -w build/**/*.spec.js",
+    "dev": "run-p build:watch test:watch"
   },
   "devDependencies": {
-    "@types/node": "^7.0.5",
-    "ava": "^0.18.1",
-    "codecov": "^1.0.1",
-    "multiview": "^2.3.1",
-    "npm-scripts-info": "^0.3.6",
-    "nyc": "^10.0.0",
-    "opn-cli": "^3.1.0",
-    "standard-version": "^4.0.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "^4.0.2",
-    "tslint-config-standard": "^4.0.0",
-    "typedoc": "^0.5.5",
-    "typescript": "^2.2.0"
-  },
-  "keywords": [
-    "erlang",
-    "elixir",
-    "otp"
-  ],
-  "nyc": {
-    "exclude": [
-      "**/*.spec.js"
-    ]
-  },
-  "ava": {
-    "files": [
-      "build/main/**/*.spec.js"
-    ],
-    "source": [
-      "build/main/**/*"
-    ]
+    "ava": "^0.22.0",
+    "npm-run-all": "^4.1.1",
+    "tslint": "^5.7.0",
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1"
   },
   "dependencies": {
-    "tslib": "^1.5.0"
+    "@types/webpack": "^3.0.13"
   }
 }
