Actors are working fine, but still there's something in responses that creates unhandled promise rejections

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
-    "@types/webpack": "^3.0.13"
+    "@types/webpack": "^3.0.13",
+    "funfix": "^6.2.2"
   }
 }
